# BioSim_G27_Trude_Nina

./: .gitignore  GUI.ui  LISENCE  README.md  requirements.txt  setup.cfg
doc/: conf.py  index.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: check_sim.py
src/biosim/: GUI.py  GUI.ui  Island_run_file.py  __init__.py  animals.py  arkiv.py  island.py  landscapes.py  our_simulation.py  rossum.txt  rossumherp.txt  run.py  simulation.py  simulation_new_testing.py  temp.py  test_nina.py  test_trude.py  visualization.py
src/biosim/doc/: animal.rst  conf.py  index.rst  landscape.rst  simulation.rst  visualization.rst
tests/: test_animals.py  test_biosim_interface.py  test_biosim_our_tests.py  test_biosimulator.py  test_landscapes.py  test_nina.py  test_trude.py
