[metadata]
name = biosim
description = A population dynamics simulation written in Python
long_description = file: README.rst
author = BioSim_G27_Trude_Nina
author_email = trude.haug.almestrand@nmbu.no,nive@nmbu.no

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    matplotlib
    numpy
    pandas

[options.packages.find]
where=src